# evo-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: docker-publish.yml
benches/: neural_net.rs  spatial_index.rs
docs/: ARCHITECTURE.md  CONFIGURATION.md  NEURAL_NETWORKS.md  SIMULATION.md  UI_GUIDE.md
src/: config.rs  lib.rs  main.rs
src/checkpoint/: mod.rs  storage.rs
src/creature/: genome.rs  metabolism.rs  mod.rs  neural_net.rs  reproduction.rs
src/evolution/: mutation.rs
src/server/: mod.rs  protocol.rs  state_stream.rs
src/simulation/: mod.rs  tick.rs
src/stats/: metrics.rs  mod.rs
src/world/: cell.rs  mod.rs  resources.rs
static/: index.html
static/css/: style.css
static/js/: app.js  renderer.js  ui.js
