[package]
name = "evo-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = "1.10"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
