[package]
name = "evo-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["rayon"]

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rayon = { version = "1.10", optional = true }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
hyper = "1.0"
